# imia

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  publish.yml
docs/: authentication.md  authenticators.md  configuration.md  impersonation.md  login_logout.md  password_verification.md  user_providers.md  user_token.md  userlike_protocol.md
examples/: apikey_authentication.py  httpbasic_authentication.py  login_logout.py  login_logout_databases.py  main.py  sqlalchemy_core.py  sqlalchemy_orm.py  stateful_impersonation.py  stateless_impersonation.py  token_authentication.py
imia/: __init__.py  authentication.py  exceptions.py  impersonation.py  login.py  protocols.py  user_providers.py  user_token.py
imia/ext/: sqlalchemy.py
tests/: conftest.py  test_anonymous_user.py  test_apikey_authentication.py  test_authentication.py  test_authentication_middleware.py  test_basic_authentication.py  test_impersonation.py  test_login.py  test_login_logout.py  test_multiple_authenticators.py  test_session_authentication.py  test_sqlalchemy_core.py  test_sqlalchemy_orm.py  test_token_authentication.py  test_user_token.py
